testing passing vars

--- a/bldr.env
+++ b/bldr.env
@@ -3,12 +3,12 @@
 # Only enable and set these if using RDS instead of a local PostgreSQL instance
 # Migrations from local PostgreSQL to RDS are curently not supported.
 export RDS_ENABLED=true
-export RDS_USER=postgres
-export RDS_PASSWORD=
+export RDS_USER=$BLDR_RDS_USER
+export RDS_PASSWORD=$BLDR_RDS_PASSWORD
 
 # The endpoint and port for your Postgresql or RDS instance
 # Change only if needed
-export POSTGRES_HOST=
+export POSTGRES_HOST=$BLDR_POSTGRES_HOST
 export POSTGRES_PORT=5432
 
 # The endpoint, key and secret for your Minio instance (see README)
@@ -23,8 +23,8 @@ export POSTGRES_PORT=5432
 export S3_ENABLED=true
 export S3_REGION=us-east-1
 export S3_BUCKET=mikel-habitat-builder-artifact-store.local
-export S3_ACCESS_KEY=
-export S3_SECRET_KEY=
+export S3_ACCESS_KEY=$BLDR_S3_ACCESS_KEY
+export S3_SECRET_KEY=$BLDR_S3_SECRET_KEY
 
 # If you'd like to use Arifactory instead of Minio, uncomment
 # and set the following variables appropriately.
@@ -90,10 +90,10 @@ export OAUTH_TOKEN_URL=https://github.com/login/oauth/access_token
 export OAUTH_REDIRECT_URL=http://habbldr.lingenfeltertraining.com/
 
 # The OAUTH_CLIENT_ID is the registered OAuth2 client id
-export OAUTH_CLIENT_ID=
+export OAUTH_CLIENT_ID=$BLDR_OAUTH_CLIENT_ID
 
 # The OAUTH_CLIENT_SECRET is the registerd OAuth2 client secret
-export OAUTH_CLIENT_SECRET=
+export OAUTH_CLIENT_SECRET=$BLDR_OAUTH_CLIENT_SECRET
 
 # Modify these only if there is a specific need, otherwise leave as is
 export BLDR_CHANNEL=on-prem-stable
