--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,6 +1,6 @@
 FROM amazonlinux
 
-RUN yum -y update; yum clean all
+RUN yum -y update git jq unzip tar; yum clean all
 RUN yum -y install systemd; yum clean all; \
 (cd /lib/systemd/system/sysinit.target.wants/; for i in *; do [ $i == systemd-tmpfiles-setup.service ] || rm -f $i; done); \
 rm -f /lib/systemd/system/multi-user.target.wants/*;\
@@ -13,7 +13,18 @@ rm -f /lib/systemd/system/anaconda.target.wants/*;
 VOLUME [ "/sys/fs/cgroup" ]
 CMD ["/usr/sbin/init"]
 
+# Install AWS CLI
+RUN curl "https://awscli.amazonaws.com/awscli-exe-linux-x86_64.zip" -o "awscliv2.zip"
+RUN unzip awscliv2.zip
+RUN ./aws/install
+
+# Misc Env
+ENV HAB_LICENSE=accept
+ENV BLDR_POSTGRES_HOST=hab-database.c7bu6q2aenah.us-east-1.rds.amazonaws.com
+ENV AWS_REGION=us-east-1
+
+#Bootstrap Builder Server
 COPY bootstrap-builder.sh .
+RUN ./bootstrap-builder.sh
 
 EXPOSE 80
-
