--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,7 +1,7 @@
 FROM amazonlinux
 
-RUN yum -y update git jq unzip tar; yum clean all
-RUN yum -y install systemd; yum clean all; \
+RUN yum -y update; yum clean all
+RUN yum -y install systemd git jq unzip tar; yum clean all; \
 (cd /lib/systemd/system/sysinit.target.wants/; for i in *; do [ $i == systemd-tmpfiles-setup.service ] || rm -f $i; done); \
 rm -f /lib/systemd/system/multi-user.target.wants/*;\
 rm -f /etc/systemd/system/*.wants/*;\
@@ -23,8 +23,8 @@ ENV HAB_LICENSE=accept
 ENV BLDR_POSTGRES_HOST=hab-database.c7bu6q2aenah.us-east-1.rds.amazonaws.com
 ENV AWS_REGION=us-east-1
 
-#Bootstrap Builder Server
+# Bootstrap Builder Server
 COPY bootstrap-builder.sh .
-RUN ./bootstrap-builder.sh
+# RUN ./bootstrap-builder.sh
 
 EXPOSE 80
